--- a/src/static/css/components/_mini-post.scss
+++ b/src/static/css/components/_mini-post.scss
@@ -18,8 +18,8 @@
       font-size: 0.9rem;
       margin: 0;
       padding: 1.25em;
-      background-color: rgba(255, 255, 255, 0.7);
-      color: #3c3b3b;
+      background-color: rgba(_palette(bg), 0.7);
+      color: _palette(fg-bold);
       font-family: 'Raleway', Helvetica, sans-serif;
       z-index: 1000;
       transition: all 0.1s;
@@ -27,7 +27,7 @@
     }
 
     p:hover {
-      background-color: rgba(255, 255, 255, 0.9);
+      background-color: rgba(_palette(bg), 0.9);
     }
   }
 
@@ -54,6 +54,7 @@
     img {
       @include vendor('transition', 'transform #{_duration(transition)} ease-out');
       width: 100%;
+      object-fit: cover;
     }
 
     &:hover {
