--- a/src/static/css/layout/_intro.scss
+++ b/src/static/css/layout/_intro.scss
@@ -16,6 +16,8 @@
 
     img {
       width: 10em;
+      height: 10em;
+      object-fit: cover;
       border-radius: 50%;
       display: block;
     }
